<resources>
    <string name="app_name">NoteAppAndroid</string>
    <string name="splash_text1">Over 90% of students who use Note App report higher grades</string>
    <string name="splash_text2">Create many notes to save anything</string>
    <string name="splash_text3">Learn in different ways and everywhere</string>
    <string name="splash_text4">Customize your theme to your exact needs</string>

    <string name="made_by_me">Made by group 25</string>
    <string name="splash_text">Life is too fast. Don\'t forget anything. Note it</string>
    <string name="create_note">Create Note</string>
    <string name="start_typing">Start typing …</string>
    <string name="title">Title</string>
    <string name="reminder">Reminder</string>
    <string name="move_to">Move to</string>
    <string name="delete">Delete</string>
    <string name="small">Small</string>
    <string name="medium">Medium</string>
    <string name="large">Large</string>
    <string name="search_hint">Search notes</string>
    <string name="delete_note">Delete notes</string>
    <string name="delete_this_note">Delete this note ?</string>
    <string name="description">Note description</string>
    <string name="content">Note content</string>
    <string name="alert_import_desc">This app will only import data in the first and the second column in your sheet. Please format data before import !</string>
    <string name="alert_import_title">Note about import mode</string>
    <string name="accept">Accept</string>
    <string name="add_web_link">Add web link</string>
    <string name="add">Add</string>
    <string name="enter_link">Enter link</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="todo">TODO</string>
    <string name="storage_permission_text">This App Needs access to your Storage.</string>
    <string name="search_notes">Search Notes</string>
    <string name="notes">Notes</string>
    <string name="my_notes">My Notes</string>
    <string name="date">Date</string>
    <string name="notes_title">Notes Title</string>
    <string name="https">https//</string>
    <string name="cancel">Cancel</string>
    <string name="ok">Ok</string>
    <string name="enter_notes_here">Enter Notes Here</string>
    <string name="bottom_bar">bottom bar</string>
    <string name="mynotes">MyNotes</string>

    <string name="noteID">noteId</string>
    <string name="url_require">Url is Required</string>
    <string name="url_validation">Url is not Valid</string>
    <string name="title_require">Title is Required</string>
    <string name="empty_note_description_warning">Notes Description Must Not Be Empty</string>

    <string name="action">action</string>
    <string name="bottom_sheet_action">bottom_sheet_action</string>
    <string name="selected_color">selectedColor</string>

    <string name="blue">Blue</string>
    <string name="cyan">Cyan</string>
    <string name="green">Green</string>
    <string name="orange">Orange</string>
    <string name="purple">Purple</string>
    <string name="red">Red</string>
    <string name="yellow">Yellow</string>
    <string name="brown">Brown</string>
    <string name="indigo">Indigo</string>
    <string name="image">Image</string>
    <string name="webUrl">WebUrl</string>
    <string name="deleteNote">DeleteNote</string>
    <string name="folder">folder</string>
    <string name="snackbarok">OK</string>
    <string name="label">Label</string>
    <string name="are_you_sure_to_delete_the_note">Are you sure to delete this notes ?</string>
    <string name="detele_note_success">Delete note successfully !</string>
    <string name="share_note_via">Share note via</string>
    <string name="set_reminder">Set reminder</string>
    <string name="cancel_reminder">Cancel reminder</string>
    <string name="time">Time</string>
    <string name="reminder_time">Reminder time</string>
    <string name="just_now">just now</string>
    <string name="reminder_is_set">Reminder is set</string>
    <string name="new_note_reminder">New note reminder</string>
    <string name="edit_note_reminder">Edit note reminder</string>
    <string name="update_reminder">Update reminder</string>
    <string name="reminder_date">Reminder date</string>
    <string name="reminder_is_cancelled">Reminder is cancelled</string>
    <string name="feb_3rd_2023">Feb 3rd, 2023</string>
    <string name="_11_30_pm">11:30 PM</string>
    <string name="create_label">Create Label</string>
    <string name="new_folder">New folder</string>
    <string name="back">Back</string>
    <string name="color">Color</string>
    <string name="parent_folder">Parent folder</string>
    <string name="none">None</string>
    <string name="show_note_creation_date">Show note creation date</string>
    <string name="create_folder">Create folder</string>
    <string name="general">General</string>
    <string name="choose">Choose</string>
    <string name="create_folder_success">Create folder successfully</string>
    <string name="no_data_found">No data found</string>
    <string name="there_no_note_found">There\'s no note existed. Create new note to storage everything now !</string>
    <string name="select">select</string>
    <string name="share_with">Share with</string>
    <string name="export_to">Export to</string>
    <string name="decline">Decline</string>
    <string name="download_excel">Download Excel</string>
    <string name="download_in_progress">Downloading note …</string>
    <string name="downloading_docx">Downloading DOCX</string>
    <string name="downloading_excel">Downloading DOCX</string>
    <string name="choose_file_format_to_download">Choose file format to download</string>
    <string name="download_word">Download Word</string>
    <string name="import_note">Import note</string>
    <string name="_0_character">0 character</string>
    <string name="characters">%s characters</string>
    <string name="default_notification_channel_id">Noti_ID</string>
    <string name="back_press_again_to_out_app">Press back again to exit</string>
    <string name="list_folder">List folder here</string>
    <string name="are_you_sure_to_delete_this_label">Are you sure to delete this label ?</string>

</resources>