<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="vertical"
    android:padding="16dp">

    <TextView
        android:id="@+id/textTitle"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="16dp"
        android:drawablePadding="8dp"
        android:text="@string/choose_file_format_to_download"
        android:textAppearance="?android:textAppearanceMedium"
        android:textColor="@android:color/black"
        android:textStyle="bold"
        app:drawableStartCompat="@drawable/download" />

    <LinearLayout
        android:id="@+id/btnDownloadExcel"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <ImageView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="5sp"
            android:contentDescription="@string/todo"
            android:padding="10sp"
            android:src="@drawable/microsoft_excel" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:fontFamily="@font/exo2variablefont"
            android:paddingLeft="10sp"
            android:paddingRight="10sp"
            android:text="@string/download_excel"
            android:textAlignment="center"
            android:textSize="18sp" />

    </LinearLayout>

    <LinearLayout
        android:id="@+id/btnDownloadWord"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <ImageView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="5sp"
            android:contentDescription="@string/todo"
            android:padding="10sp"
            android:src="@drawable/microsoft_word" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:fontFamily="@font/exo2variablefont"
            android:paddingLeft="10sp"
            android:paddingRight="10sp"
            android:text="@string/download_word"
            android:textAlignment="center"
            android:textSize="18sp" />

    </LinearLayout>

</LinearLayout>


