<?xml version="1.0" encoding="utf-8"?>
<androidx.core.widget.NestedScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    style="@style/BaseDialogFragment"
    android:layout_width="match_parent"
    android:layout_height="wrap_content">

    <LinearLayout
        android:id="@+id/ll"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">

        <LinearLayout
            android:id="@+id/ll_date"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="@dimen/spacing_normal"
            android:layout_marginTop="@dimen/spacing_normal"
            android:layout_marginBottom="@dimen/spacing_small"
            android:background="@drawable/generic_ripple_shape"
            android:orientation="horizontal">

            <com.google.android.material.textview.MaterialTextView
                android:id="@+id/tv_date"
                style="@style/ListDialogItem"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@string/date"
                app:drawableStartCompat="@drawable/ic_round_calendar_24" />

            <com.google.android.material.textview.MaterialTextView
                android:id="@+id/tv_date_value"
                style="@style/ListDialogItemValue"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/feb_3rd_2023"
                tools:text="Feb 3rd, 2023" />
        </LinearLayout>

        <LinearLayout
            android:id="@+id/ll_time"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="@dimen/spacing_normal"
            android:layout_marginTop="@dimen/spacing_small"
            android:layout_marginBottom="@dimen/spacing_normal"
            android:background="@drawable/generic_ripple_shape"
            android:orientation="horizontal">

            <com.google.android.material.textview.MaterialTextView
                android:id="@+id/tv_time"
                style="@style/ListDialogItem"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@string/time"
                app:drawableStartCompat="@drawable/ic_round_schedule_24" />

            <com.google.android.material.textview.MaterialTextView
                android:id="@+id/tv_time_value"
                style="@style/ListDialogItemValue"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/_11_30_pm"
                tools:text="11:30 PM" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="@dimen/spacing_normal"
            android:gravity="center"
            android:orientation="horizontal">

            <com.google.android.material.button.MaterialButton
                android:id="@+id/btn_set"
                style="@style/MaterialButton"
                android:textColor="@color/colorSecondary"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginEnd="@dimen/spacing_small"
                android:layout_weight="1"
                android:padding="@dimen/spacing_normal"
                android:text="@string/set_reminder" />

            <com.google.android.material.button.MaterialButton
                android:id="@+id/btn_cancel"
                style="?attr/materialIconButtonFilledStyle"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="@dimen/spacing_small"
                android:contentDescription="@string/cancel_reminder"
                android:padding="@dimen/spacing_normal"
                android:textSize="@dimen/size_large"
                app:backgroundTint="@color/colorSurface"
                app:icon="@drawable/ic_round_cancel_24"
                app:iconSize="26dp"
                app:iconTint="@color/colorPrimary"
                app:shapeAppearanceOverlay="@style/FabShapeAppearanceOverlay" />
        </LinearLayout>

    </LinearLayout>
</androidx.core.widget.NestedScrollView>